fix(ui): tweak spacing of article.coto header in _coto-flow.scss

--- a/cotoami_desktop/ui/assets/css/app/_coto-flow.scss
+++ b/cotoami_desktop/ui/assets/css/app/_coto-flow.scss
@@ -28,6 +28,11 @@
           height: 32px;
           margin-right: 10px;
         }
+
+        div.attributes {
+          // as padding-top for a header that has address.author but not attributes.
+          min-height: 12px;
+        }
       }
 
       div.content {
